objects/iContactforSF__iContact_Message_Statistic__c.object
<CustomObject>
    <customHelpPage>iContactforSF__iContactHelp</customHelpPage>
    <description>Contains the statistics for an individual message recipient from iContact.</description>
    <fields>
        <fullName>Identifier__c</fullName>
        <formula>iContactforSF__Lead__r.Ipsis_Mori_survey_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Bounced__c</fullName>
        <description>If this recipient&apos;s email bounced, this field contains the date/time of the latest bounce.</description>
        <inlineHelpText>If this recipient&apos;s email bounced, this field contains the date/time of the latest bounce.</inlineHelpText>
        <label>Bounced Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The campaign that is associated with this statistic.</description>
        <inlineHelpText>The campaign that is associated with this statistic.</inlineHelpText>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>iContact Message Statistics</relationshipLabel>
        <relationshipName>iContact_Message_Statistics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Clicked__c</fullName>
        <description>If this recipient clicked on the email, this field contains the date/time of the latest click.</description>
        <inlineHelpText>If this recipient clicked on the email, this field contains the date/time of the latest click.</inlineHelpText>
        <label>Last Clicked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Clicks__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of time this contact clicked a link in the message.</description>
        <inlineHelpText>Number of time this contact clicked a link in the message.</inlineHelpText>
        <label>Total Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If the campaign member this statistic is for was from a Contact, this field will hold the ID of the Contact.</description>
        <inlineHelpText>If the campaign member this statistic is for was from a Contact, this field will hold the ID of the Contact.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>iContact Message Statistic</relationshipLabel>
        <relationshipName>iContact_Message_Statistic</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>iContactforSF__IdString__c</fullName>
        <description>Hidden field, used for pagination</description>
        <formula>Id&amp;if(mid(Id,10,1)=upper(mid(Id,10,1)), &quot;1&quot;, &quot;0&quot;)&amp;if(mid(Id,11,1)=upper(mid(Id,11,1)), &quot;1&quot;, &quot;0&quot;)&amp;if(mid(Id,12,1)=upper(mid(Id,12,1)), &quot;1&quot;, &quot;0&quot;)&amp;if(mid(Id,13,1)=upper(mid(Id,13,1)), &quot;1&quot;, &quot;0&quot;)&amp;if(mid(Id,14,1)=upper(mid(Id,14,1)), &quot;1&quot;, &quot;0&quot;)&amp;if(mid(Id,15,1)=upper(mid(Id,15,1)), &quot;1&quot;, &quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hidden field, used for pagination</inlineHelpText>
        <label>IdString</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If the campaign member this statistic is for was from a Lead, this field will hold the ID of the Lead.</description>
        <inlineHelpText>If the campaign member this statistic is for was from a Lead, this field will hold the ID of the Lead.</inlineHelpText>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>iContact Message Statistic</relationshipLabel>
        <relationshipName>iContact_Message_Statistic</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Opened__c</fullName>
        <description>If this recipient opened the email, this field contains the date/time of the latest open.</description>
        <inlineHelpText>If this recipient opened the email, this field contains the date/time of the latest open.</inlineHelpText>
        <label>Last Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Opens__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of time this contact opened the message.</description>
        <inlineHelpText>Number of time this contact opened the message.</inlineHelpText>
        <label>Total Opens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Recipient_ID__c</fullName>
        <externalId>true</externalId>
        <label>Recipient_ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Unsubscribed__c</fullName>
        <description>If this recipient unsubscribed, this field contains the date/time of the unsubscribe.</description>
        <inlineHelpText>If this recipient unsubscribed, this field contains the date/time of the unsubscribe.</inlineHelpText>
        <label>Unsubscribed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>iContactforSF__iContact_Contact_ID__c</fullName>
        <description>The iContact ID of the contact this message was sent to.</description>
        <inlineHelpText>The iContact ID of the contact this message was sent to.</inlineHelpText>
        <label>iContact Contact ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iContactforSF__iContact_Sent_Message__c</fullName>
        <description>The message this statistic is from.</description>
        <inlineHelpText>The message this statistic is from.</inlineHelpText>
        <label>iContact Sent Message</label>
        <referenceTo>iContactforSF__iContact_Sent_Message__c</referenceTo>
        <relationshipLabel>iContact Message Statistic</relationshipLabel>
        <relationshipName>iContact_Message_Statistic</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>iContact Message Statistic</label>
    <nameField>
        <label>Recipient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>iContact Message Statistics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>